--- a/Estudos.BlobStorage/Estudos.BlobStorage.csproj
+++ b/Estudos.BlobStorage/Estudos.BlobStorage.csproj
@@ -9,11 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.10.0" />
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Helper\" />
   </ItemGroup>
 
 </Project>
