--- a/Estudos.BlobStorage/appsettings.Development.json
+++ b/Estudos.BlobStorage/appsettings.Development.json
@@ -5,4 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   }
+  //"ConnectionStrings": {
+  //  "StorageAccount": ""
+  //},
+  //"ContainnerSettings": {
+  //  "Name": ""
+  //}
 }
