[REFACTOR] refatorando service

--- a/Estudos.BlobStorage/appsettings.Development.json
+++ b/Estudos.BlobStorage/appsettings.Development.json
@@ -4,11 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "StorageAccount": ""
+  },
+  "ContainnerSettings": {
+    "Name": ""
   }
-  //"ConnectionStrings": {
-  //  "StorageAccount": ""
-  //},
-  //"ContainnerSettings": {
-  //  "Name": ""
-  //}
 }
